[package]
name = "gnu-libjit"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
homepage = "https://github.com/n8ta/gnu-libjit"
repository = "https://github.com/n8ta/gnu-libjit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnu-libjit-sys = "0.0.0"
libc = "0.2"