[package]
name = "gnu-libjit"
version = "0.1.1"
edition = "2021"
license = "GPL-2.0-only"
homepage = "https://github.com/n8ta/gnu-libjit"
repository = "https://github.com/n8ta/gnu-libjit"
description = "A safe rust wrapper around the libjit just in time compiler"

[dependencies]
gnu-libjit-sys = "0.0.1"
libc = "0.2"